cmake_minimum_required (VERSION 3.0)
project (kmnotify)
find_package(PkgConfig REQUIRED)
pkg_check_modules(DEPS xcb-xkb libnotify xkbcommon-x11)
link_directories(${DEPS_LIBRARY_DIRS})
include_directories(${DEPS_INCLUDE_DIRS})
set(CMAKE_C_FLAGS "-Wall -std=c99 ")
add_executable(kmnotify kmnotify.c notifications.c xcbinterface.c)
target_link_libraries(kmnotify ${DEPS_LIBRARIES})
install(TARGETS kmnotify DESTINATION bin)
# CPACK packaging

IF(EXISTS "${CMAKE_ROOT}/Modules/CPack.cmake")
    INCLUDE(InstallRequiredSystemLibraries)
    set(CPACK_PACKAGE_NAME "kmnotify")
    set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "any")
    set(CPACK_DEBIAN_PACKAGE_DEPENDS "libxcb-dev, libxkbcommon-x11-dev, libnotify-dev")
    set(CPACK_PACKAGE_CONTACT "Isaac True <isaac@is.having.coffee>")
    set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Simple program to show a notification when the keyboard layout has been changed.")
    set(CPACK_DEBIAN_PACKAGE_SECTION "contrib")
    set(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
    set(CPACK_COMPONENTS_ALL Libraries ApplicationData)
    set(CPACK_PACKAGE_VERSION "1.0.1")
    INCLUDE(CPack)
ENDIF(EXISTS "${CMAKE_ROOT}/Modules/CPack.cmake")
